--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://beverse.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: liyuhao
+subtitle:
+author: liyuhao
 simple_search: https://www.google.com/search
 description:
 
